--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     text-transform: uppercase;
     letter-spacing: .3em;
     top: 15%;
-	background: linear-gradient(to rgb(247, 247, 247), rgb(128, 236, 236)); /* Standard syntax */
+	background: linear-gradient(to right, rgb(214, 168, 0), rgb(177, 78, 2)); /* Standard syntax */
 }
 
 h1 {
